--- a/ejat-parent/ejat-boot/pom.xml
+++ b/ejat-parent/ejat-boot/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>ejat-boot</artifactId>
-	<packaging>maven-plugin</packaging>
+	<packaging>jar</packaging>
 
 	<name>eJAT Boot</name>
 
@@ -31,10 +31,6 @@
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.bundlerepository</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.maven.plugin-tools</groupId>
-			<artifactId>maven-plugin-annotations</artifactId>
 		</dependency>
 	</dependencies>
 
@@ -74,9 +70,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>3.2.1</version>
-				<configuration>
-					<finalName>ejat-boot</finalName>
-				</configuration>
 				<executions>
 					<execution>
 						<phase>package</phase>
