--- a/ejat-parent/ejat-bom/pom.xml
+++ b/ejat-parent/ejat-bom/pom.xml
@@ -65,6 +65,25 @@
 				<artifactId>commons-logging</artifactId>
 				<version>1.2</version>
 			</dependency>
+
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient-osgi</artifactId>
+				<version>4.5.8</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpcore-osgi</artifactId>
+				<version>4.4.11</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>org.osgi</groupId>
+				<artifactId>org.osgi.service.cm</artifactId>
+				<version>1.6.0</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
