--- a/ejat-parent/ejat-boot/src/main/resources/trace-log4j.properties
+++ b/ejat-parent/ejat-boot/src/main/resources/trace-log4j.properties
@@ -6,3 +6,8 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:ss.SSS} %p %c.%M - %m%n
+
+
+log4j.logger.ftp=INFO
+log4j.logger.com.sshtools=WARN
+log4j.logger.org.apache.http=INFO
