--- a/ejat-parent/pom.xml
+++ b/ejat-parent/pom.xml
@@ -22,6 +22,7 @@
 		<module>cirillo-k8s-controller</module>
 		<module>cirillo-resource-management</module>
 		<module>cirillo-metrics</module>
+		<module>cirillo-demo-archetype</module>
 	</modules>
 
 	<distributionManagement>
