--- a/voras-parent/voras-boot/pom.xml
+++ b/voras-parent/voras-boot/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -84,7 +83,7 @@
 							<groupId>dev.voras</groupId>
 							<artifactId>dev.voras.framework.maven.repository</artifactId>
 							<version>${dev.voras.framework.maven.repository}</version>
-						</artifactItem>				
+						</artifactItem>
 						<artifactItem>
 							<groupId>dev.voras</groupId>
 							<artifactId>dev.voras.framework.maven.repository.spi</artifactId>
@@ -159,6 +158,36 @@
 									<include>commons-io</include>
 								</includes>
 							</artifactSet>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+					<trimStackTrace>false</trimStackTrace>
+				</configuration>
+				<executions>
+					<execution>
+						<id>unit-tests</id>
+						<phase>test</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>integration-tests</id>
+						<phase>integration-test</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<configuration>
+							<skip>false</skip>
+							<includes>
+								<include>**/IT*.java</include>
+							</includes>
 						</configuration>
 					</execution>
 				</executions>
