--- a/voras-parent/dev.voras.framework.api.authentication/pom.xml
+++ b/voras-parent/dev.voras.framework.api.authentication/pom.xml
@@ -22,6 +22,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.8.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>${javax.servlet-api}</version>
