--- a/voras-parent/dev.voras.framework.api.authentication/pom.xml
+++ b/voras-parent/dev.voras.framework.api.authentication/pom.xml
@@ -21,6 +21,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
+		<dependency>
 			<groupId>com.auth0</groupId>
 			<artifactId>java-jwt</artifactId>
 			<version>3.8.1</version>
