--- a/voras-parent/pom.xml
+++ b/voras-parent/pom.xml
@@ -63,11 +63,11 @@
 		<felix.gogo.shell>1.1.2</felix.gogo.shell>
 		<felix.gogo.runtime>1.1.2</felix.gogo.runtime>
 		<felix.gogo.command>1.1.0</felix.gogo.command>
-		
-		<osgi.core>6.0.0</osgi.core>
+
+		<org.osgi.core>6.0.0</org.osgi.core>
 		<org.osgi.service.cm>1.6.0</org.osgi.service.cm>
 		<org.osgi.service.component.annotations>1.3.0</org.osgi.service.component.annotations>
-		
+
 		<javax.servlet-api>3.1.0</javax.servlet-api>
 
 		<commons-logging>1.2</commons-logging>
@@ -81,22 +81,22 @@
 		<bcel>6.3</bcel>
 		<httpclient-osgi>4.5.8</httpclient-osgi>
 		<httpcore-osgi>4.4.11</httpcore-osgi>
-		
+
 		<gson>2.8.5</gson>
-		
+
 		<prometheus.simpleclient>0.6.0</prometheus.simpleclient>
 		<prometheus.httpserver>0.6.0</prometheus.httpserver>
 		<prometheus.hotspot>0.6.0</prometheus.hotspot>
-		
+
 		<validation-api>2.0.1.Final</validation-api>
 	</properties>
 
 
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>org.apache.felix.framework</artifactId>
-			<version>6.0.2</version>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.core</artifactId>
+			<version>${org.osgi.core}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -108,7 +108,7 @@
 		<dependency>
 			<groupId>org.osgi</groupId>
 			<artifactId>org.osgi.service.component.annotations</artifactId>
-			<version>1.3.0</version>
+			<version>${org.osgi.service.component.annotations}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
