--- a/galasa-parent/dev.galasa.framework.api.health/pom.xml
+++ b/galasa-parent/dev.galasa.framework.api.health/pom.xml
@@ -20,6 +20,12 @@
 			<version>0.5.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
