--- a/galasa-parent/dev.galasa.framework.api/pom.xml
+++ b/galasa-parent/dev.galasa.framework.api/pom.xml
@@ -9,11 +9,9 @@
 		<version>0.5.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>dev.galasa.framework.api.bootstrap</artifactId>
+	<artifactId>dev.galasa.framework.api</artifactId>
 	<version>0.5.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
-
-	<name>Galasa API boostrap</name>
 
 	<dependencies>
 		<dependency>
@@ -28,18 +26,16 @@
 			<version>1.2</version>
 			<scope>provided</scope>
 		</dependency>
-
-
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1.0</version>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.service.cm</artifactId>
+			<version>1.6.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.osgi</groupId>
-			<artifactId>org.osgi.service.component.annotations</artifactId>
-			<version>1.3.0</version>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.apache.felix.bundlerepository</artifactId>
+			<version>2.0.2</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
