--- a/galasa-parent/pom.xml
+++ b/galasa-parent/pom.xml
@@ -77,6 +77,7 @@
 		<module>galasautils-maven-plugin</module>
 		<module>galasastaging-maven-plugin</module>
 		<module>dev.galasa.framework.api.runs</module>
+		<module>dev.galasa.framework.api</module>
 	</modules>
 
 	<distributionManagement>
