--- a/galasa-parent/dev.galasa.framework.api.runs/pom.xml
+++ b/galasa-parent/dev.galasa.framework.api.runs/pom.xml
@@ -14,6 +14,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>dev.galasa</groupId>
+			<artifactId>dev.galasa</artifactId>
+			<version>0.5.0-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework</artifactId>
 			<version>0.5.0-SNAPSHOT</version>
 			<scope>provided</scope>
