--- a/galasa-parent/dev.galasa.framework.api.launcher/pom.xml
+++ b/galasa-parent/dev.galasa.framework.api.launcher/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.5.0</version>
+		<version>0.6.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>dev.galasa.framework.api.launcher</artifactId>
-	<version>0.5.0</version>
+	<version>0.6.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
 	<name>Galasa API launcher</name>
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework</artifactId>
-			<version>0.5.0</version>
+			<version>0.6.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
         <dependency>
