--- a/galasa-parent/galasautils-maven-plugin/src/main/resources/managerTopic.template
+++ b/galasa-parent/galasautils-maven-plugin/src/main/resources/managerTopic.template
@@ -15,15 +15,13 @@ $annotation
 
 
 #if( $codeSnippets )
-<details>
-<summary>Code snippets</summary>
+$H$H Code snippets
 
 Use the following code snippets to help you get started with the $name Manager.
 #foreach( $codeSnippet in $codeSnippets )
  
 $codeSnippet
 #end
-</details>
 #end
 
 #if( $cpsProperties )
