--- a/galasa-parent/dev.galasa.framework/pom.xml
+++ b/galasa-parent/dev.galasa.framework/pom.xml
@@ -30,7 +30,7 @@
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework.maven.repository.spi</artifactId>
-			<version>0.8.0-SNAPSHOT</version>
+			<version>0.3.0</version> <!-- Allow for discrepancy with boot -->
 			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
