--- a/galasa-parent/dev.galasa.framework/pom.xml
+++ b/galasa-parent/dev.galasa.framework/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.8.0-SNAPSHOT</version>
+		<version>0.8.0</version>
 	</parent>
 
 	<artifactId>dev.galasa.framework</artifactId>
@@ -15,7 +15,7 @@
 	galasa-bom
 	dev.galasa.eclipse.feature (including feature.xml)
 	-->
-	<version>0.8.0-SNAPSHOT</version>
+	<version>0.8.0</version>
 	<packaging>bundle</packaging>
 
 	<name>Galasa Framework</name>
@@ -24,7 +24,7 @@
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa</artifactId>
-			<version>0.8.0-SNAPSHOT</version>
+			<version>0.8.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
