--- a/galasa-parent/pom.xml
+++ b/galasa-parent/pom.xml
@@ -174,16 +174,16 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-    		<groupId>org.powermock</groupId>
-    		<artifactId>powermock-module-junit4</artifactId>
-    		<version>2.0.4</version>
-    		<scope>test</scope>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<version>2.0.4</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
-    		<groupId>org.powermock</groupId>
-    		<artifactId>powermock-api-mockito2</artifactId>
-    		<version>2.0.4</version>
-    		<scope>test</scope>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito2</artifactId>
+			<version>2.0.4</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.awaitility</groupId>
@@ -322,6 +322,13 @@
 						</goals>
 						<configuration>
 						</configuration>
+					</execution>
+					<execution>
+						<id>jacoco-site</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
