--- a/galasa-parent/galasautils-maven-plugin/pom.xml
+++ b/galasa-parent/galasautils-maven-plugin/pom.xml
@@ -82,6 +82,12 @@
 			<version>3.11.1</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
