--- a/galasa-parent/dev.galasa.framework.api.runs/pom.xml
+++ b/galasa-parent/dev.galasa.framework.api.runs/pom.xml
@@ -3,11 +3,11 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.10.0-SNAPSHOT</version>
+		<version>0.10.0</version>
 	</parent>
 
 	<artifactId>dev.galasa.framework.api.runs</artifactId>
-	<version>0.10.0-SNAPSHOT</version>
+	<version>0.10.0</version>
 	<packaging>bundle</packaging>
 
 
@@ -15,13 +15,13 @@
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa</artifactId>
-			<version>0.10.0-SNAPSHOT</version>
+			<version>0.10.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>dev.galasa</groupId>
 			<artifactId>dev.galasa.framework</artifactId>
-			<version>0.10.0-SNAPSHOT</version>
+			<version>0.10.0</version>
 			<scope>provided</scope>
 		</dependency>
 		
