--- a/galasa-parent/galasautils-maven-plugin/pom.xml
+++ b/galasa-parent/galasautils-maven-plugin/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<groupId>dev.galasa</groupId>
 		<artifactId>galasa-parent</artifactId>
-		<version>0.10.0</version>
+		<version>0.11.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>galasautils-maven-plugin</artifactId>
-	<version>0.10.0</version>
+	<version>0.11.0-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
 
 	<properties>
